Fix error message wrapping

--- a/assets/src/input.scss
+++ b/assets/src/input.scss
@@ -273,6 +273,7 @@
         font-size: 14px;
         font-weight: 700;
         color: #f44336;
+        white-space: nowrap;
     }
 
     .acf-image-aspect-ratio-crop-modal-footer-buttons {
